# kafka-producer-benchmark

./: .gitignore  LICENSE  README.md  destroy-cloud-env.sh  docker-compose-1-broker.yml  docker-compose-3-brokers.yml  docker-compose-kraft-3-brokers.yml  docker-compose-kraft.yml  docker-compose.yml  docker-kraft-run.sh  extract_results.py  run-jupiter.sh  run-scenario-cloud.sh  run-scenario.sh  run-scenarios-cloud.sh  run-scenarios.sh  scenario-100t6p-custom-batching-with-agg-per-topic.env  scenario-100t6p-custom-batching.env  scenario-1t6p-custom-batching.env  scenario-1t6p-java-defaults.env  scenario-1t6p-librdkafka-defaults.env  utils.sh
bench-initializer/: pom.xml
cloud/setup/: bash-to-tfvars.py  clients.tf  cluster.tf  kraft-in-k8s.tf.wip  kubernetes.tf  main.tf  outputs.tf  provider.tf  providers.tf  terraform.tfvars  variables.tf
dotnet-producer/: Dockerfile  Logger.cs  bench-producer.cs  benchmark.cs  benchmark.csproj  utils.cs
golang-producer/: .env  Dockerfile  go.mod  go.sum  main.go
golang-producer/config/: config.go
golang-producer/stats/: stats.go
java-producer/: Dockerfile  pom.xml
python-producer/: Dockerfile  benchmark-producer.py  requirements.txt
report/: Dockerfile  benchmark-report.ipynb  docker-compose.yml  extract_results.py
rust-producer-sync/: Cargo.toml  Dockerfile
rust-producer-sync/src/: config.rs  gen.rs  main.rs  stats.rs  utils.rs
rust-producer-sync/src/traffic/: mod.rs  poisson.rs  throttler.rs
rust-producer-sync/src/utils/: collection_utils.rs  conversion_utils.rs  kafka_utils.rs  mod.rs
(+5 files in other folders)
